Speed up initial extraction A LOT! This is a very experimental change relying on other, as yet unreleased code. (Archive::Unzip::Burst) More to come!

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+[Changes for 0.975_01 - Jul 12, 2007]
+* New features
+    - If available, the packager will include the new and slightly
+      experimental Archive::Unzip::Burst module in generated binary
+      executables. This can speed up the initial extraction of such
+      a binary by a significant factor.
+      (Total running time went from 8 seconds to 1.4 seconds in a
+      simplistic test.)
+
+* Bug fixes, etc.
+    - Makefile.PL doesn't require 5.006 any more but uses 'strict' now.
+    - Makefile.PL doesn't use Module::AutoInstall any more. It's evil.
+    - Dependency on PAR.pm upgraded to 0.974_01.
+
 [Changes for 0.975 - May 06, 2007]
 * Bug fixes, etc.
     - Trailing backslashes in @INC paths handled in
