Fixed a problem where a second invocation of a --clean app could end up using the temp directory of the previous invocation while it is still being cleaned up.  This primarily happens on Windows because pids are recycled quickly.  The change is to rename the temp directory to a unique name before launching the background cleanup process.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+    - When deleting the temp directory in the background, rename the
+      directory to a unique name to avoid potential collisions caused
+      by pid reuse (primarily an issue on Windows).
     - PAR::Packer now depends on Module::ScanDeps 0.78 because 0.77
       had a critical bug. If you are having trouble with M::SD 0.78,
       please a) report it in the bug tracker and b) try versions of
