* Fix doc typo and copyright year etc.

--- a/README
+++ b/README
@@ -154,7 +154,7 @@ Please submit bug reports to <bug-par@rt.cpan.org>.
 
 * Copyright
 
-Copyright 2002, 2003, 2004, 2005, 2006 by Audrey Tang <cpan@audreyt.org>.
+Copyright 2002-2008 by Audrey Tang <cpan@audreyt.org>.
 
 All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
