--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+[Changes for 0.980 - May 14, 2008]
+* Emergency bug fix release
+    - The test suite in the previous release was broken by my debugging
+      code. Sorry about that. (Steffen)
+
 [Changes for 0.979 - May 13, 2008]
 * Bug fixes, etc.
 
