--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+[Changes for 0.981 - May 14, 2008]
+* Bug fixes, etc.
+    - Make get_username_from_getpwuid work for uid=0. (Scott Stanton)
+
 [Changes for 0.980 - May 14, 2008]
 * Emergency bug fix release
     - The test suite in the previous release was broken by my debugging
