--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
     - Make get_username_from_getpwuid work for uid=0. (Scott Stanton)
     - Fixed crash in get_username_from_getpwuid when getpwuid fails.
       (Scott Stanton)
+    - Fix broken build on win32 when searching for dll and finding static perl
+      library. (Alexey Borzenkov)
 
 [Changes for 0.980 - May 14, 2008]
 * Emergency bug fix release
