Applied documentation changes from Dave Howorth, which are much better than my own.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 [Changes for 0.982]
 * Documentation
-    - Clarified examples in the pp documentation.
+    - Clarified examples in the pp documentation, thanks to Dave Howorth.
 
 [Changes for 0.981 - May 14, 2008]
 * Bug fixes, etc.
