--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-[Changes for 0.982]
+[Changes for 0.982 - Jul 18, 2008]
 * Bug fixes, etc.
+    - Fix bleadperl compilation.
     - Ensure extracted files are marked executable on HP-UX so they can be
       used by the dynamic linker. (Scott Stanton)
     - Fixed incorrect error handling code in test for directory existence when
@@ -14,6 +15,9 @@
       from a prior invocation of a different par application.  This eliminates
       the need to rename the temp directory before removing it, which was
       causing race conditions in multi-threaded apps.  (Scott Stanton)
+    - Now officially requires Perl 5.6.1 and up in the Makefile.PL.
+      This has been the case for a long time anyway, but this change
+      should suppress some spurious CPAN testers failures.
 
 * Documentation
     - Clarified examples in the pp documentation, thanks to Dave Howorth.
