proper error for a bad -M usage

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 * Bug fixes, etc.
     - Fix the stripping of =encoding POD lines in PAR::Filter::PodStrip
+    - Throw a proper error if a module specified via -M cannot be found
+      (Roderich Schupp, Gabor Szabo)
 
 * Documentation
     - RT #12104.  Improved documentation in pp on -T/--tempcache.
