band-aid fix for RT #41790 in par.pl

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
     - Throw a proper error if a module specified via -M cannot be found
       (Roderich Schupp, Gabor Szabo)
     - Don't update exe's with icons twice on Win32.
+    - Band-aid fix for RT #41790 in par.pl.
 
 * Documentation
     - RT #12104.  Improved documentation in pp on -T/--tempcache.
