--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,16 @@
+* New features
+    - Add Roderich's reeally useful debugging tool "extract_embedded.pl" to
+      the contrib/ subdirectory. It can be used to extract the contents of a
+      "parl" binary.
+
 * Bug fixes, etc.
     - Add Errno and Tie::Hash::NamedCapture (if available) to required_modules
     - Fix the stripping of =encoding POD lines in PAR::Filter::PodStrip
     - Throw a proper error if a module specified via -M cannot be found
       (Roderich Schupp, Gabor Szabo)
     - Don't update exe's with icons twice on Win32.
-    - Band-aid fix for RT #41790 in par.pl.
+    - Band-aid fix for RT #41790 in par.pl
+    - Some very slightly more careful handling of environment variables in par.pl
 
 * Documentation
     - RT #12104.  Improved documentation in pp on -T/--tempcache.
