--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+[Changes for 0.989_01 - Mar 10, 2009]
 * New features
     - Add Roderich's reeally useful debugging tool "extract_embedded.pl" to
       the contrib/ subdirectory. It can be used to extract the contents of a
