update copyright to 2009

--- a/script/parl.pod
+++ b/script/parl.pod
@@ -107,7 +107,7 @@ Please submit bug reports to E<lt>bug-par@rt.cpan.orgE<gt>.
 
 =head1 COPYRIGHT
 
-Copyright 2002, 2003, 2004, 2005, 2006 by Audrey Tang
+Copyright 2002-2009 by Audrey Tang
 E<lt>cpan@audreyt.orgE<gt>.
 
 Neither this program nor the associated L<pp> program impose any
