--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+[Changes for 0.992_01 - Jul 19, 2009]
+* New features
+    - Reusable pp packaged applications (see pp's --reusable option)
+
 * Bug fixes, etc.
     - Accept other extensions than .par in -p mode.
 
