Document a bugfix in changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* Bug fixes, etc.
+    - Fix RT #48614: ignore setting of PERL5OPT (and others) in a
+      packed executable (Roderich)
+
 [Changes for 0.992_03 - Jul 24, 2009]
 * Bug fixes, etc.
     - Fix "Can't locate IO/file.pm in @INC ..." bug (Markus Jansen)
