document rejection of main.pl input script

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* New features
+    - Reject "main.pl" as input scripts since this can override the
+      bootstrapping code. For wizards who really want this, there
+      should be still "-a main.pl;script/main.pl".
+
 * Bug fixes, etc.
     - Fix RT #48614: ignore setting of PERL5OPT (and others) in a
       packed executable (Roderich)
