--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+[Changes for 1.000 - Nov 22, 2009]
+No functional changes since the latest development release.
+
+But let's (finally) encourage the notion that this is
+production grade software by using a version >= 1!
+
 [Changes for 0.992_06 - Nov 20, 2009]
 * Bug fixes, etc.
     - Attempt to fix build problems where PERL5LIB is used to include
