--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+[Changes for 1.001 - Nov 24, 2009]
+* Bug fixes, etc.
+    - Fix to the rejection of "main.pl" as input scripts. Previously,
+      we rejected /main\.pl$/, now we only reject files named "main.pl"
+      as we should (Markus Jansen)
+
 [Changes for 1.000 - Nov 22, 2009]
 No functional changes since the latest development release.
 
