--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+[Changes for 1.002 - Dec 17, 2009]
+* Bug fixes, etc.
+    - RT #52407: fix calls of sprintf in myldr/mktmpdir.c that rely on
+      unspecified behaviour (output buffer is also among the input
+      parameters). (Roderich)
+
 [Changes for 1.001 - Nov 24, 2009]
 * Bug fixes, etc.
     - Fix to the rejection of "main.pl" as input scripts. Previously,
